--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: bg-ceramic;
+  background: bg-whiteBackground;
   line-height: 1.5rem;
     
 }
