--- a/src/components/ui/banners/banner-categories/BannerCategories.css
+++ b/src/components/ui/banners/banner-categories/BannerCategories.css
@@ -5,14 +5,6 @@ body {
   height: 100%;
 }
 
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
-}
 
 .swiper {
   width: 100%;
@@ -30,4 +22,21 @@ body {
 .swiper-slide img {
   display: block;
   width: 100%;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #B7AA8C !important; /* Change to your desired active background color */
+}
+
+.swiper-pagination-bullet {
+  width: 12px; /* Change to your desired width */
+  height: 12px; /* Optionally, change the height as well */
+  /* Add any other styles as needed */
+}
+
+.swiper-pagination-bullet {
+  background: transparent;
+  border: 3px solid #B7AA8C;
+  margin-right: 0.7rem !important; /* Adjust the horizontal margin to increase the gap between bullets */
+  /* Add any other styles as needed */
 }
