--- a/src/components/ui/banners/banner-categories/BannerCategories.css
+++ b/src/components/ui/banners/banner-categories/BannerCategories.css
@@ -1,9 +1,3 @@
-#app { height: 100% }
-html,
-body {
-  position: relative;
-  height: 100%;
-}
 
 
 .swiper {
@@ -24,19 +18,19 @@ body {
   width: 100%;
 }
 
-.swiper-pagination-bullet-active {
-  background-color: #B7AA8C !important; /* Change to your desired active background color */
+#bannerCategories .swiper-pagination-bullet-active {
+  background-color: #00377A !important; /* Change to your desired active background color */
 }
 
-.swiper-pagination-bullet {
-  width: 12px; /* Change to your desired width */
-  height: 12px; /* Optionally, change the height as well */
+#bannerCategories .swiper-pagination-bullet {
+  width: 16px; /* Change to your desired width */
+  height: 16px; /* Optionally, change the height as well */
   /* Add any other styles as needed */
 }
 
-.swiper-pagination-bullet {
+#bannerCategories .swiper-pagination-bullet {
   background: transparent;
-  border: 3px solid #B7AA8C;
+  border: 2px solid #00377A;
   margin-right: 0.7rem !important; /* Adjust the horizontal margin to increase the gap between bullets */
   /* Add any other styles as needed */
 }
