--- a/src/components/ui/banners/banner-homepage/BannerHomepage.css
+++ b/src/components/ui/banners/banner-homepage/BannerHomepage.css
@@ -1,6 +1,9 @@
+#swiperHome {
+  padding-bottom: 0px !important;
+} 
     
   #swiperHome .swiper-pagination-bullet-active {
-    background-color: #B7AA8C !important; /* Change to your desired active background color */
+    background-color: #917360 !important; /* Change to your desired active background color */
   }
   
   #swiperHome  .swiper-pagination-bullet {
@@ -8,10 +11,15 @@
     height: 12px; /* Optionally, change the height as well */
     /* Add any other styles as needed */
   }
+
+  #swiperHome  .swiper-pagination {
+    bottom: 1rem !important;
+  }
   
   #swiperHome  .swiper-pagination-bullet {
+
     background: transparent;
-    border: 3px solid #B7AA8C;
+    border: 3px solid #917360;
     margin-right: 0.7rem !important; /* Adjust the horizontal margin to increase the gap between bullets */
     /* Add any other styles as needed */
   }
